--- a/package.json
+++ b/package.json
@@ -46,6 +46,8 @@
     "react-app-polyfill": "^0.1.3",
     "react-dev-utils": "^6.1.1",
     "react-dom": "^16.6.1",
+    "react-grid-layout": "^0.16.6",
+    "react-resizable": "^1.7.5",
     "react-router-dom": "^4.3.1",
     "resolve": "1.8.1",
     "style-loader": "0.23.0",
